[package]
name = "walkdir"
version = "2.3.1"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Recursively walk a directory."
documentation = "https://docs.rs/walkdir/"
homepage = "https://github.com/BurntSushi/walkdir"
repository = "https://github.com/BurntSushi/walkdir"
readme = "README.md"
keywords = ["directory", "recursive", "walk", "iterator"]
categories = ["filesystem"]
license = "Unlicense/MIT"
exclude = ["/ci/*", "/.travis.yml", "/appveyor.yml"]
edition = "2018"

[badges]
travis-ci = { repository = "BurntSushi/walkdir" }
appveyor = { repository = "BurntSushi/walkdir" }

[workspace]
members = ["walkdir-list"]

[dependencies]
same-file = {git="https://github.com/lengyijun/same-file"}

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { version = "1.0", rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features=["untrusted_fs","thread", "backtrace"] }
sgx_libc = { version = "1.0", rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[dev-dependencies]
doc-comment = "0.3"
